--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,600;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 
+:root {
+  --post-it-yellow: #FFFF99;
+  --leather-brown: #501b00;
+  --leather-border: #401600;
+  --book-form-text: #ebe2be;
+}
+
 html, body {
   /* font-family: 'Asap', sans-serif; */
   font-family: 'Cutive Mono', monospace;
@@ -15,18 +22,19 @@ p {
   position: absolute;
   padding: 60px;
   height: 75vh;
-  border: 2px solid #401600;
+  border: 2px solid var(--leather-border);
   border-radius: 5px;
   left: 0;
-  color: #ebe2be;
+  color: var(--book-form-text);
   font-weight: 900;
-  transition: left 0.5s ease-in;
-  background-color: #501b00 ;
+  transition: transform 0.5s ease-in;
+  background-color: var(--leather-brown);
   background-image: url(images/large-leather.png);
 }
 
 #add-book-form.hidden {
-  left: -200px;
+  /* left: -200px; */
+  transform: translateX(-95%);
 }
 
 #add-book-button {
@@ -35,7 +43,7 @@ p {
   position: absolute;
   top: 0;
   left: 100%;
-  background-color: #FFFF99;
+  background-color: var(--post-it-yellow);
   border: none;
   margin-left: 2px;
   padding: 16px;
@@ -54,7 +62,7 @@ p {
 }
 
 #form-submit:hover {
-  color: #FFFF99;
+  color: var(--post-it-yellow);
   font-weight: 900;
 }
 
@@ -69,9 +77,10 @@ p {
   grid-template-columns: 1fr 3fr;
   grid-template-rows: repeat(5, 1fr);
   text-align: center;
-  /* border: 2px solid #eadbb0; */
   background: rgb(235,226,190);
   background: linear-gradient(180deg, rgba(235,226,190,1) 40%, rgba(236,231,210,1) 75%);
+  -webkit-box-shadow: 2px 1px 4px 1px rgba(35,26,3,0.25); 
+  box-shadow: 2px 1px 4px 1px rgba(35,26,3,0.25);
   border-radius: 10px;
   height: 350px;
   min-width: 210px;
@@ -142,6 +151,21 @@ button {
   border: none;
   font-family: inherit;
   font-size: 1rem;
+}
+
+.attribution {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.attribution a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.attribution a:hover {
+  color: var(--post-it-yellow);
 }
 
 /* Media Queries */
