--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,600;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 
 :root {
   --post-it-yellow: #FFFF99;
   --leather-brown: #501b00;
   --leather-border: #401600;
-  --book-form-text: #ebe2be;
+  --book-form-text: rgba(235,226,190,1);
 }
 
 html, body {
@@ -75,7 +74,13 @@ p {
 #library-set {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  padding: 60px;
+  margin: 40px;
+  background-color: var(--leather-border);
+  background-image: url(images/dark-wood.png);
+  border: 50px solid var(--leather-border);
+  padding: 20px;
+  border-image: url(images/purty-wood.png) 60 round;
+  min-width: min-content;
 }
 
 .book-info {
@@ -83,8 +88,8 @@ p {
   grid-template-columns: 1fr 3fr;
   grid-template-rows: repeat(5, 1fr);
   text-align: center;
-  background: rgb(235,226,190);
-  background: linear-gradient(180deg, rgba(235,226,190,1) 40%, rgba(236,231,210,1) 75%);
+  background: var(--book-form-text);
+  background: linear-gradient(180deg, var(--book-form-text) 40%, rgba(236,231,210,1) 75%);
   -webkit-box-shadow: 2px 1px 4px 1px rgba(35,26,3,0.25); 
   box-shadow: 2px 1px 4px 1px rgba(35,26,3,0.25);
   border-radius: 10px;
@@ -107,11 +112,17 @@ p {
   border-bottom: 1px solid black;
   width: 100%;
   font-weight: 900;
+  align-self: end;
 }
 
 .book-info .author {
   border-bottom: 4px double black;
   width: 100%;
+  align-self: end;
+}
+
+.book-info .pages {
+  align-self: center;
 }
 
 button {
