--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ p {
 
 #library-set {
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  -ms-grid-columns: (1fr)[6];
   grid-template-columns: repeat(6, 1fr);
   /* min-width: min-content; */
 }
@@ -98,7 +98,7 @@ p {
 .book-info {
   display: grid;
   -ms-grid-columns: 1fr 3fr;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: (1fr)[5];
   grid-template-columns: 1fr 3fr;
   grid-template-rows: repeat(5, 1fr);
   text-align: center;
@@ -196,20 +196,20 @@ button {
 /* Media Queries */
 @media only screen and (max-width: 1600px) {
   #library-set {
-    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+    -ms-grid-columns: (1fr)[4];
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media only screen and (max-width: 1200px) {
   #library-set {
-    -ms-grid-columns: 1fr 1fr 1fr;
+    -ms-grid-columns: (1fr)[3];
     grid-template-columns: repeat(3, 1fr);
   }
 }
 @media only screen and (max-width: 1024px) {
   #library-set {
-    -ms-grid-columns: 1fr 1fr 1fr;
+    -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
   }
 }
