--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
 
 :root {
-  --post-it-yellow: #FFFF99;
+  --post-it-yellow: #ffff99;
   --leather-brown: #501b00;
   --leather-border: #401600;
-  --book-form-text: rgba(235,226,190,1);
+  --book-form-text: rgba(235, 226, 190, 1);
 }
 
-html, body {
-  font-family: 'Cutive Mono', monospace;
+html,
+body {
+  font-family: "Cutive Mono", monospace;
   font-size: 20px;
   margin: 0;
 }
@@ -31,7 +32,7 @@ p {
   width: 300px;
   height: 75vh;
   min-height: 350px;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   border: 2px solid var(--leather-border);
@@ -53,7 +54,8 @@ p {
   transform: translateX(-95%);
 }
 
-#add-book-button, #sort-books-button {
+#add-book-button,
+#sort-books-button {
   font-family: inherit;
   font-size: 1rem;
   position: absolute;
@@ -90,7 +92,7 @@ p {
 
 #library-set {
   display: grid;
-  -ms-grid-columns: (1fr)[6];
+  -ms-grid-columns: (1fr) [6];
   grid-template-columns: repeat(6, 1fr);
   /* min-width: min-content; */
 }
@@ -98,14 +100,19 @@ p {
 .book-info {
   display: grid;
   -ms-grid-columns: 1fr 3fr;
-  -ms-grid-rows: (1fr)[5];
+  -ms-grid-rows: (1fr) [5];
   grid-template-columns: 1fr 3fr;
   grid-template-rows: repeat(5, 1fr);
   text-align: center;
   background: var(--book-form-text);
-  background: url(images/lined-paper-2.png), linear-gradient(180deg, var(--book-form-text) 40%, rgba(236,231,210,1) 75%);
-  -webkit-box-shadow: 2px 1px 4px 1px rgba(35,26,3,0.25); 
-  box-shadow: 2px 1px 4px 1px rgba(35,26,3,0.25);
+  background: url(images/lined-paper-2.png),
+    linear-gradient(
+      180deg,
+      var(--book-form-text) 40%,
+      rgba(236, 231, 210, 1) 75%
+    );
+  -webkit-box-shadow: 2px 1px 4px 1px rgba(35, 26, 3, 0.25);
+  box-shadow: 2px 1px 4px 1px rgba(35, 26, 3, 0.25);
   border-radius: 10px;
   height: 350px;
   min-width: 210px;
@@ -196,20 +203,20 @@ button {
 /* Media Queries */
 @media only screen and (max-width: 1600px) {
   #library-set {
-    -ms-grid-columns: (1fr)[4];
+    -ms-grid-columns: (1fr) [4];
     grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media only screen and (max-width: 1200px) {
   #library-set {
-    -ms-grid-columns: (1fr)[3];
+    -ms-grid-columns: (1fr) [3];
     grid-template-columns: repeat(3, 1fr);
   }
 }
 @media only screen and (max-width: 1024px) {
   #library-set {
-    -ms-grid-columns: (1fr)[2];
+    -ms-grid-columns: (1fr) [2];
     grid-template-columns: repeat(2, 1fr);
   }
 }
